--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food - Fresh & Tasty</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/27feda58ee.js" crossorigin="anonymous"></script>
 </head>
 
@@ -30,7 +30,7 @@
             </div>
 
             <div id="tarte">
-                <img src="/images/lum3n403555unsplash.jpg" alt="Image tarte">
+                <img src="images/lum3n403555unsplash.jpg" alt="Image tarte">
             </div>
 
         </div>
@@ -47,7 +47,7 @@
             </div>
 
             <div id="salade">
-                <img src="/images/f.jpg" alt="Image tarte">
+                <img src="images/f.jpg" alt="Image tarte">
             </div>
 
         </div>
@@ -65,18 +65,18 @@
             </div>
 
             <div id="tasse">
-                <img src="/images/002.jpg" alt="Images tasse">
+                <img src="images/002.jpg" alt="Images tasse">
             </div>
         </div>
 
         <div id="bloc5">
-            <img src="/images/001.jpg" alt="Image oeuf">
+            <img src="images/001.jpg" alt="Image oeuf">
         </div>
     </main>
 
 
     <footer>
-        <img src="/images/sx-5.png" alt="Logo">
+        <img src="images/sx-5.png" alt="Logo">
         <div id="rs">
             <a href="http://facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
             <a href="http://twitter.com"><i class="fa-brands fa-twitter"></i></i></a>
