--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <div class="bloc1">
-            <img class="logo" src="/images/sx.png" alt="Logo Food - Fresh & Tasty">
+            <img class="logo" src="images/sx.png" alt="Logo Food - Fresh & Tasty">
             <div id="cercle"></div>
         </div>
 
